--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@types/d3": "7.4.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-icons": "^3.0.0",
     "antd": "^5.19.3",
     "d3": "7.8.5",
+    "numeral": "^2.0.6",
     "powerbi-visuals-api": "~5.3.0",
     "powerbi-visuals-utils-formattingmodel": "6.0.0",
     "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5"
   },
   "devDependencies": {
